# holochain-playground

./: flake.nix  package.json  pnpm-lock.yaml
fixture/: Cargo.toml  package-lock.json  package.json
fixture/dnas/forum/workdir/: dna.yaml
fixture/dnas/forum/zomes/coordinator/posts/src/: all_posts.rs  comment.rs  post.rs
fixture/tests/: package.json
fixture/ui/: index.html  package.json  vite.config.ts
fixture/ui/src/: holochain-app.ts  shared-styles.ts
fixture/ui/src/forum/posts/: all-posts.ts  comment-detail.ts  comments-for-post.ts  create-comment.ts  create-post.ts  edit-post.ts  post-detail.ts  types.ts
fixture/workdir/: happ.yaml
